--- a/css/index.css
+++ b/css/index.css
@@ -121,5 +121,63 @@
     max-width: 33.33%;
     font-size: 10em;
 }
+.rules{
+    display: flex;
+    background-color: blueviolet;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 16px;
+
+}
+.rules__image-tres-raya-container{
+    max-width: 365px;
+    margin: 0;
+    border: solid 8px var(--color-text-second);
+    transition: all 0.5s;
+
+}
+.rules__image-tres-raya-container:hover{
+    border: solid 8px gold;
+    transition: all 0.5s;
+
+}
+
+.image-tres-raya__image{
+    width: 100%;
+    margin: 0;
+}
+
+.rules__rules-play-container{
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    padding: 8px 20px;
+    
+
+   
+}
+.rules-play__title{
+   margin:0 auto;
+   font-family: 'Press Start 2P', cursive;
+   font-size: 2rem;
+   color: var(--color-text-second);
+  
+   
+   
+
+}
+.rules-play__rules-list-container{
+    padding: 0 8px;
+    display: flex;
+    flex-direction: column;
+    gap:8px;
+}
+.rules-list_rule{
+    font-weight: 300;
+}
+
+
+
 
 
