--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,7 @@
     --color-text-second:#0BD4C1;
     --primary-theme-color: blueviolet;
     --inverse-theme-color:rgb(28, 15, 216);
-   
-    --color-hover-menu: #14bdac;
+    --color-hover-menu: #168a7e;
    
 }
 
@@ -83,15 +82,17 @@
 
 .main{
     padding: 16px 0;
-    /* background-color: blueviolet; */
+    
 }
 .main__article{
+    padding: 0 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     gap: 20px;
     font-family: 'Press Start 2P', cursive;
-    /* background-color:blueviolet; */
+  
     
 
 }
@@ -115,7 +116,7 @@
 
 }
 .article__boar{
-    max-width: 450px;
+    max-width: 300px;
     display: flex;
     flex-wrap: wrap;
     border: solid 0.4rem black;
@@ -124,10 +125,10 @@
 
 }
 .article__boar__button{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
+    font-size: 5rem;
     max-width: 33.33%;
-    font-size: 7rem;
     padding: 2px 0;
 }
 .article__button-play-again{
@@ -238,6 +239,17 @@
 	visibility: hidden;
 	color: var(--color-text-second);
 }
+@media(min-width:854px){
+    .article__boar{
+        max-width: 450px;
+    }
+    .article__boar__button{
+        width: 150px;
+        height: 150px;
+        font-size: 7rem;
+    }
 
+    
+}
 
 
